crates/math-core/tests/snapshots/substitution_test__Coloneqq--conventional.snap
---
source: crates/math-core/tests/substitution_test.rs
expression: "a\\Coloneqq b"
---
<math>
    <mi>a</mi>
    <mo>⩴</mo>
    <mi>b</mi>
</math>
