crates/math-core/tests/snapshots/substitution_test__Coloneqq--never.snap
---
source: crates/math-core/tests/substitution_test.rs
expression: "a\\Coloneqq b"
---
<math>
    <mi>a</mi>
    <mo lspace="0.2778em" rspace="0">∶</mo>
    <mo lspace="0" rspace="0">∶</mo>
    <mo lspace="0">=</mo>
    <mi>b</mi>
</math>
