crates/math-core/tests/snapshots/substitution_test__cdots_before_close--conventional.snap
---
source: crates/math-core/tests/substitution_test.rs
expression: "{\\sum \\cdots}"
---
<math>
    <mrow>
        <mo lspace="0">∑</mo>
        <mo lspace="0" rspace="0">⋯</mo>
    </mrow>
</math>
