crates/math-core/tests/snapshots/substitution_test__conventional_dashcolon.snap
---
source: crates/math-core/tests/substitution_test.rs
expression: "a\\dashcolon b"
---
<math>
    <mi>a</mi>
    <mo>∹</mo>
    <mi>b</mi>
</math>
