crates/math-core/tests/snapshots/substitution_test__conventional_dblcolon.snap
---
source: crates/math-core/tests/substitution_test.rs
expression: "a\\dblcolon b"
---
<math>
    <mi>a</mi>
    <mo>∷</mo>
    <mi>b</mi>
</math>
